--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* Estilos Generales */
-body {
+body, #root {
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #f4f4f4;
